endpoint obtener películas y crear película